--- a/FYP---Vehicules-Service-and-Maintenance-Record-System.csproj
+++ b/FYP---Vehicules-Service-and-Maintenance-Record-System.csproj
@@ -8,6 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Customer\**" />
+    <Compile Remove="Views\Employee\**" />
+    <Compile Remove="Views\MainMenu\**" />
+    <Content Remove="Views\Customer\**" />
+    <Content Remove="Views\Employee\**" />
+    <Content Remove="Views\MainMenu\**" />
+    <EmbeddedResource Remove="Views\Customer\**" />
+    <EmbeddedResource Remove="Views\Employee\**" />
+    <EmbeddedResource Remove="Views\MainMenu\**" />
+    <None Remove="Views\Customer\**" />
+    <None Remove="Views\Employee\**" />
+    <None Remove="Views\MainMenu\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
@@ -18,12 +33,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Customer\" />
-    <Folder Include="Views\Employee\" />
-    <Folder Include="Views\MainMenu\" />
   </ItemGroup>
 
 </Project>
